more migrations to base java.* APIs