@@ -39,8 +39,8 @@ import static org.mockito.Mockito.when;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import org.jrobin.core.RrdDb;
@@ -257,7 +257,7 @@ public class CollectableServiceTest {
         repository.setRrdBaseDir(getSnmpRrdDirectory());
         repository.setHeartBeat(600);
         repository.setStep(300);
-        repository.setRraList(Collections.singletonList("RRA:AVERAGE:0.5:1:100"));
+        repository.setRraList(List.of("RRA:AVERAGE:0.5:1:100"));
         return repository;
     }
 
